tests/arch/mips/correct/syscalls/test_mips_syscall_007.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
main:
	li $v0, 7
    syscall
    