tests/arch/mips/error/executor/test_mips_error_executor_001.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
